--- a/src/app/post-item/post-item.component.html
+++ b/src/app/post-item/post-item.component.html
@@ -3,5 +3,5 @@
 <p>Votes: {{post.votes}}</p>
 <button (click) = "upvote(post)">Upvote</button>
 <button (click) = "downvote(post)">Downvote</button>
-<button></button>
+<button (click) = "hide(post)">Hide</button>
 <br>
