--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -7,5 +7,5 @@
 </ul>-->
 
 
-<app-post-item *ngFor = "let post of posts" [post]="post"></app-post-item>
+<app-post-item *ngFor = "let post of posts" [post]="post" (hidePost)="hidePost($event)"></app-post-item>
 
