--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<h1>hello world</h1>
 
-<app-about></app-about>
+<router-outlet></router-outlet>
+
+<!--
+    <h1>hello world</h1>
+    <app-about></app-about>
 
 <app-posts></app-posts>
 
-<app-recipe></app-recipe>
+<app-recipe></app-recipe>-->
