--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
+<div class="margins">
+    <router-outlet></router-outlet>
+</div>
+
 
 <!--
     <h1>hello world</h1>
