--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -9,3 +9,4 @@
 
 <app-post-item *ngFor = "let post of posts" [post]="post" (hidePost)="hidePost($event)"></app-post-item>
 
+<app-create-post (addPost)="addPost($event)"></app-create-post>
